--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<?php require 'get.php'; ?>
-
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
@@ -8,16 +6,6 @@
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 <meta name="yandex-verification" content="2b234ca99e9ffa75" />
-
-
-
-
-
-
-
-
-
-
 
     <title>Глаз Бога: официальный сайт поискового сервиса</title>
     <meta name="description" content="Глаз Бога – это сервис по поиску информации по открытым источникам, который работает через телеграм бот.">
@@ -57,7 +45,7 @@
                         </a>
                     </div>
                     <div class="button button--empty">
-                        <a href="<?php echo $telegramBotLink; ?>" target="_blank" title="Телеграм бот">
+                        <a href="https://t.me/glazbogaio" target="_blank" title="Телеграм бот">
                             <svg>
                                 <use href="images/telegram.svg#telegram"></use>
                             </svg>
@@ -89,7 +77,7 @@
                             </ul>
                             <div class="index__button">
                                 <div class="button">
-                                    <a href="<?php echo $telegramBotLink; ?>" target="_blank" title="Открыть бот">Попробовать</a>
+                                    <a href="https://t.me/glazbogaio>" target="_blank" title="Открыть бот">Попробовать</a>
                                 </div>
                             </div>
                         </div>
