--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </ul>
                             <div class="index__button">
                                 <div class="button">
-                                    <a href="https://t.me/glazbogaio>" target="_blank" title="Открыть бот">Попробовать</a>
+                                    <a href="https://t.me/glazbogaio" target="_blank" title="Открыть бот">Попробовать</a>
                                 </div>
                             </div>
                         </div>
