--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 
     <link rel="stylesheet" id="twentytwenty-style-css" href="css/style.css" media="all">
-    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://glazbogacom.github.io/glazboga/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <script src="https://yegod.tech/wp-includes/js/wp-emoji-release.min.js?ver=6.4.1" defer=""></script>
 
